Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -73,7 +73,7 @@ Box 351580 \\
 Seattle, WA 98195-1580 \\
 
 \section{Education} 
-Ph.D. Candidate in Astronomy \& Astrobiology (dual-title PhD program) \hfill (2014 -- Present) \\
+Ph.D. Candidate in Astronomy \& Astrobiology (dual-title PhD program) \hfill (2014 -- Jun. 2020) \\
 University of Washington, Seattle, WA  \\
 \textit{Advisor:} Victoria Meadows 
 
@@ -186,16 +186,17 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
                 {\sl Contributed Talks}
-                \begin{benumerate}{8}
-                    \item $^{\star}$\textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2020, $^{\star}$\textit{upcoming}). \href{https://www.abstractsonline.com/pp8/#!/8993/presentation/2216}{``The Detection and Characterization of Terrestrial Exoplanet Atmospheres and the Search for Habitability and Biosignatures''}. American Astronomical Society Meeting Abstracts, 235, \#230.05
+                \begin{benumerate}{7}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://docs.google.com/viewer?url=https://agu.confex.com/agu/abscicon19/mediafile/ExtendedAbstract/Paper481632/JLY_AbSciCon2019_Abstract3.pdf}{``TRAPPIST-1 and Beyond: Strategies for Characterizing Terrestrial Exoplanets and their Habitability''}. Abstract [202-7] presented at 2019 Astrobiology Science Conference, Bellevue, WA, 24-28 June. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). ``Detecting and Characterizing Terrestrial Atmospheres in the TRAPPIST-1 System with JWST''. TRAPPIST-1 Conference, Li\`ege, Belgium, 11-14 Jun. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{http://adsabs.harvard.edu/abs/2019AAS...23310303L}{``Simulating the Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. American Astronomical Society Meeting Abstracts, 233, \#103.03
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar, G., Schwieterman, E., W., Fujii, Y., Luger, R., \& Robinson, T. D.\ (2018). \href{https://agu.confex.com/agu/fm18/prelim.cgi/Paper/384157}{``Detecting Oceans on Exoplanets with Next-Generation Telescopes''}. 2018 AGU Fall Meeting, Washington, D.C., 10-14 Dec. P51B-09
                     \item \textbf{Lustig-Yaeger, J.}, Luger, R., \& Agol, E. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4100.pdf}{``Probing the Orbital Dynamics and Atmospheric Properties of the TRAPPIST-1 Planets with JWST''}. Habitable Worlds 2017, \#4100
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
-                    \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03
+                    \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03\\ 
                 \end{benumerate}
+                
+                \newpage
                 {\sl Posters}
                 \begin{benumerate}{8}  
                     \item \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4098.pdf}{``Extending Atmospheric Characterization to Earth-Sized Exoplanets with JWST: Transits, Eclipses, and the TRAPPIST-1 System''}. Habitable Worlds 2017, Laramie, WY \#4098
