Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -129,6 +129,7 @@ University of California, Santa Cruz, CA \\
 \section{Honors \\ \& Awards}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
                     %\item Astrobiology Fellow at University of Washington Astrobiology Program (2014)
+                    \item NASA Group Achievement Award: LUVOIR Mission Concept Study Team (2019)
                     \item Honors undergraduate thesis in physics (2013)
                     \item University Honor, \textit{cum laude} at University of California, Santa Cruz (2013)\\
                  \end{itemize}  
@@ -153,9 +154,10 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{15}
+                \begin{benumerate}{16}
+                    \item $^{\star}$Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020, $^{\star}$\textit{submitted}). \href{}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
-                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{submitted}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. %\textit{The Astrophysical Journal}.
+                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in review}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}.
                     \item $^{\star}$Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2019, $^{\star}$\textit{in prep}). \href{}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. %\textit{The Astrophysical Journal}.
                     \item $^{\star}$Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2019, $^{\star}$\textit{in review}). \href{}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}.
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
@@ -196,7 +198,6 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03\\ 
                 \end{benumerate}
                 
-                \newpage
                 {\sl Posters}
                 \begin{benumerate}{8}  
                     \item \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4098.pdf}{``Extending Atmospheric Characterization to Earth-Sized Exoplanets with JWST: Transits, Eclipses, and the TRAPPIST-1 System''}. Habitable Worlds 2017, Laramie, WY \#4098
