--- a/cv.tex
+++ b/cv.tex
@@ -157,9 +157,9 @@ University of California, Santa Cruz, CA \\
                 \begin{benumerate}{16}
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item $^{\star}$Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2019, $^{\star}$\textit{in prep}). \href{}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. %\textit{The Astrophysical Journal}.
-                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in review}). \href{}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}.
-                    \item $^{\star}$Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020, $^{\star}$\textit{accepted}). \href{}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}.
-                    \item Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200202549G/abstract}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}, 893 140. 
+                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2019, $^{\star}$\textit{in review}). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}.
+                    \item $^{\star}$Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020, $^{\star}$\textit{accepted}). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200412475C/abstract}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}.
+                    \item Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200202549G/abstract}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}, 893, 140. 
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
