Updates from Overleaf

--- a/cv_onepage.tex
+++ b/cv_onepage.tex
@@ -61,50 +61,56 @@ Box 351580 \\
 Seattle, WA 98195-1580 \\
 
 \section{Education} 
-University of Washington, Seattle, WA \hfill 2014 --\\
-Graduate student in Astronomy and Astrobiology (dual-title PhD program)  
+Ph.D. Candidate in Astronomy \& Astrobiology (dual-title PhD program) \hfill (2014 -- Jun. 2020) \\
+University of Washington, Seattle, WA  \\
+\textit{Advisor:} Victoria Meadows 
 
-University of Washington, Seattle, WA \hfill 2014 -- 2016\\
-M. Sci. in Astronomy
+M. Sci. in Astronomy \hfill (2014 -- 2016) \\
+University of Washington, Seattle, WA 
 
-University of California, Santa Cruz, CA  \hfill 2009 -- 2013\\
-B.S.\ with Honors in Physics \\
-Minor in Mathematics\\
+B.S.\ in Physics (Honors), Minor in Mathematics \hfill (2009 -- 2013) \\
+University of California, Santa Cruz, CA \\
+\textit{Advisor:} Jonathan Fortney \\
+
+\section{Research \\Interests}
+                \begin{itemize}  \itemsep -1pt %reduce space between items
+                        \item Characterizing terrestrial exoplanets for habitability and signs of life 
+                        \item Retrieving terrestrial planet atmospheres using Bayesian statistics 
+                        \item Modeling telescope sensitivity to motivate future exoplanet science cases 
+                        \item Developing novel methods to detect exoplanet habitability and biosignatures \\
+                    \end{itemize}
 
 \section{Research \\Experience} 
-                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill          Sept 2014 --\\
-                Extrasolar planets, their atmospheres, \& habitability with Dr. Victoria Meadows
+                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill (Sept 2014 -- Present)\\
+                Terrestrial exoplanets, their atmospheres, habitability \& biosignatures
                     \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item Lead developer of a retrieval model for the analysis of terrestrial exoplanet spectra 
-                        \item Experience simulating and analyzing radiative transfer, photochemical, climate, telescope noise, and exoplanet mapping models
-                        \item Programming in Python, Julia, IDL, \& Fortran
-                    \end{itemize}  
+                        \item Developed, tested, and applied a physically rigorous terrestrial exoplanet retrieval model  
+                        \item Simulated and analyzed radiative transfer, photochemical, climate, telescope, surface mapping, and machine learning models
+                    \end{itemize} 
 
-                {\sl Junior Specialist}: University of California, Santa Cruz \hfill          Dec 2013 -- Aug 2014\\
-                Hot Jupiter atmospheres with Dr. Jonathan Fortney and Dr. Michael Line
+                {\sl Undergraduate \& Postbaccalaureate Researcher}: University of California, Santa Cruz \hfill          (2012 -- 2014)\\
+                Hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval 
                     \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item Wrote Python code to analyze the emission spectra of exoplanets observed during secondary eclipse
-                        \item Gained experience using Bayesian methods of parameter estimation
-                    \end{itemize}  
+                        \item Retrieved exoplanet atmospheric compositions using emission spectra 
+                        %\item Applied Bayesian methods for parameter estimation 
+                        \item Calculated and published weighted mean opacities for substellar and planetary atmospheres\\
+                    \end{itemize} 
                     
 \section{Honors \\ \& Awards}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
                     %\item Astrobiology Fellow at University of Washington Astrobiology Program (2014)
+                    \item NASA Group Achievement Award: LUVOIR Mission Concept Study Team (2019)
                     \item Honors undergraduate thesis in physics (2013)
                     \item University Honor, \textit{cum laude} at University of California, Santa Cruz (2013)\\
                  \end{itemize}  
 
 \section{Selected \\ Publications} 
-                \begin{benumerate}{5}
-                    %\item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
-                    \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
-                    \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017ApJ...851...94L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{The Astrophysical Journal}, 851(2), 94.
-                    \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{The Astronomical Journal}, 154(5), 189.
-                    \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
-                    %\item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
-                    \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
-                    %\item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
-                 \end{benumerate}
+                \begin{benumerate}{4}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
+                    \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
+                \end{benumerate}
                  
 
 \end{resume}
