--- a/cv.tex
+++ b/cv.tex
@@ -157,8 +157,8 @@ University of California, Santa Cruz, CA \\
                 \begin{benumerate}{16}
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2020, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item $^{\star}$Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020, $^{\star}$\textit{submitted}). \href{}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. %\textit{The Astrophysical Journal}.
-                    \item $^{\star}$Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020, $^{\star}$\textit{accepted}). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}.
-                    \item Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.tmp.1322C/abstract}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}.
+                    \item Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}, 160(1), 11. 
+                    \item Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.495..962C/abstract}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}, 495(1), 962-970.
                     \item Guzewich, S. D., \textbf{Lustig-Yaeger, J.}, Davis, C. E., Kopparapu, R. K., Way, M. J., \& Meadows, V. S.  (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200202549G/abstract}{``The Impact of Planetary Rotation Rate on the Reflectance and Thermal Emission Spectrum of Terrestrial Exoplanets Around Sun-like Stars''}. \textit{The Astrophysical Journal}, 893, 140. 
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
@@ -182,7 +182,7 @@ University of California, Santa Cruz, CA \\
                 {\sl Invited Talks}
                 \begin{benumerate}{4}
                     \item \textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019). 
-                    \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. 
+                    \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. \href{https://www.youtube.com/watch?v=DDPguEQPPos}{\textit{Watch it on YouTube!}}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
