--- a/cv_uw_final.tex
+++ b/cv_uw_final.tex
@@ -55,8 +55,8 @@
 \vspace{-12pt}
 \hspace{-1in}
 \begin{minipage}[t]{0.93\resumewidth}
-Email: \href{mailto:jacob.lustig-yaeger@jhuapl.edu}{jacob.lustig-yaeger@jhuapl.edu} \hfill GitHub: \href{https://github.com/jlustigy}{jlustigy}\\
-Web: \url{https://jlustigy.github.io/}
+Email: \href{mailto:jlustigy@uw.edu}{jlustigy@uw.edu} \hfill GitHub: \href{https://github.com/jlustigy}{jlustigy}\\
+Web: \url{http://staff.washington.edu/jlustigy/}
 \end{minipage}
 
 
@@ -66,20 +66,15 @@ Web: \url{https://jlustigy.github.io/}
 
 \begin{resume}
 
-\section{Current \\Position}
-Exoplanet Post Doctoral Fellow \\
-Johns Hopkins Applied Physics Laboratory \\
-
-%\section{Office \\Address}
-%Department of Astronomy, University of Washington \\
-%Physics-Astronomy Bldg, B319 \\
-%Box 351580 \\
-%Seattle, WA 98195-1580 \\
+\section{Office \\Address}
+Department of Astronomy, University of Washington \\
+Physics-Astronomy Bldg, B319 \\
+Box 351580 \\
+Seattle, WA 98195-1580 \\
 
 \section{Education} 
-Ph.D. in Astronomy \& Astrobiology (dual-titled Ph.D.) \hfill (2014 -- 2020) \\
+Ph.D. Candidate in Astronomy \& Astrobiology (dual-title PhD program) \hfill (2014 -- Jun. 2020) \\
 University of Washington, Seattle, WA  \\
-\href{https://digital.lib.washington.edu/researchworks/handle/1773/46370}{``The Detection, Characterization, and Retrieval of Terrestrial Exoplanet Atmospheres''} \\
 \textit{Advisor:} Victoria Meadows 
 
 M. Sci. in Astronomy \hfill (2014 -- 2016) \\
@@ -159,8 +154,7 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{17}
-                    \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., & Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
+                \begin{benumerate}{16}
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2020, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.5151M/abstract}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}, 160(1), 11. 
