Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -160,7 +160,7 @@ University of California, Santa Cruz, CA \\
                 \end{benumerate}
                 {\sl Co-Authored}
                 \begin{benumerate}{17}
-                    \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., & Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
+                    \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., \& Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
                     \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2020, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.5151M/abstract}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}, 160(1), 11. 
