Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -48,7 +48,7 @@
 
 %% Center the name over the entire width of resume:
 \moveleft.5\hoffset\centerline{\textsc{\Large Jacob Lustig-Yaeger}}
-\moveleft.5\hoffset\centerline{Curriculum Vitae}
+\moveleft.5\hoffset\centerline{Astronomy \& Astrobiology, PhD}
 %
 %% Draw a horizontal line the whole width of resume:
 \moveleft\hoffset\vbox{\hrule width 0.93\resumewidth height 1pt}
@@ -56,7 +56,7 @@
 \hspace{-1in}
 \begin{minipage}[t]{0.93\resumewidth}
 Email: \href{mailto:jacob.lustig-yaeger@jhuapl.edu}{jacob.lustig-yaeger@jhuapl.edu} \hfill GitHub: \href{https://github.com/jlustigy}{jlustigy}\\
-Web: \url{https://jlustigy.github.io/}
+Web: \url{https://jlustigy.github.io/} \hfill ORCID: \href{https://orcid.org/0000-0002-0746-1980}{0000-0002-0746-1980}
 \end{minipage}
 
 
@@ -66,26 +66,23 @@ Web: \url{https://jlustigy.github.io/}
 
 \begin{resume}
 
-\section{Current \\Position}
-Exoplanet Post Doctoral Fellow \\
-Johns Hopkins Applied Physics Laboratory \\
+%\section{Current \\Position}
+%Exoplanet Post Doctoral Fellow \hfill (2020 -- present)\\
+%Johns Hopkins Applied Physics Laboratory \\
 
-%\section{Office \\Address}
-%Department of Astronomy, University of Washington \\
-%Physics-Astronomy Bldg, B319 \\
-%Box 351580 \\
-%Seattle, WA 98195-1580 \\
+\section{Office \\Address}
+11100 Johns Hopkins Rd \\
+Laurel, MD 20723 \\
+United States \\
 
 \section{Education} 
-Ph.D. in Astronomy \& Astrobiology (dual-titled Ph.D.) \hfill (2014 -- 2020) \\
+PhD in Astronomy \& Astrobiology (dual-titled PhD) \hfill (2014 -- 2020) \\
+MS in Astronomy (2016) \\
 University of Washington, Seattle, WA  \\
-\href{https://digital.lib.washington.edu/researchworks/handle/1773/46370}{``The Detection, Characterization, and Retrieval of Terrestrial Exoplanet Atmospheres''} \\
+\textit{Thesis:} \href{https://digital.lib.washington.edu/researchworks/handle/1773/46370}{``The Detection, Characterization, and Retrieval of Terrestrial Exoplanet Atmospheres''} \\
 \textit{Advisor:} Victoria Meadows 
 
-M. Sci. in Astronomy \hfill (2014 -- 2016) \\
-University of Washington, Seattle, WA 
-
-B.S.\ in Physics (Honors), Minor in Mathematics \hfill (2009 -- 2013) \\
+BS in Physics (Honors), Minor in Mathematics \hfill (2009 -- 2013) \\
 University of California, Santa Cruz, CA \\
 \textit{Advisor:} Jonathan Fortney \\
 
@@ -98,20 +95,23 @@ University of California, Santa Cruz, CA \\
                     \end{itemize}
 
 \section{Research \\Experience} 
-                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill (Sept 2014 -- Present)\\
+                {\sl Post Doctoral Fellow}: The Johns Hopkins Applied Physics Laboratory \hfill (2020 -- present)\\
+                Terrestrial exoplanet atmospheres, theory \& observation, mission concepts
+                
+                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill (2014 -- 2020)\\
                 Terrestrial exoplanets, their atmospheres, habitability \& biosignatures
-                    \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item Developed, tested, and applied a physically rigorous terrestrial exoplanet retrieval model  
-                        \item Simulated and analyzed radiative transfer, photochemical, climate, telescope, surface mapping, and machine learning models
-                    \end{itemize} 
+                    %\begin{itemize}  \itemsep -1pt %reduce space between items
+                    %    \item Developed, tested, and applied a physically rigorous terrestrial exoplanet retrieval model  
+                    %    \item Simulated and analyzed radiative transfer, photochemical, climate, telescope, surface mapping, and machine learning models
+                    %\end{itemize} 
 
                 {\sl Undergraduate \& Postbaccalaureate Researcher}: University of California, Santa Cruz \hfill          (2012 -- 2014)\\
-                Hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval 
-                    \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item Retrieved exoplanet atmospheric compositions using emission spectra 
-                        \item Applied Bayesian methods for parameter estimation 
-                        \item Calculated and published weighted mean opacities for substellar and planetary atmospheres\\
-                    \end{itemize} 
+                Hot Jupiter \& brown dwarf atmospheres, opacity sources, and atmospheric retrieval \\
+                    %\begin{itemize}  \itemsep -1pt %reduce space between items
+                    %    \item Retrieved exoplanet atmospheric compositions using emission spectra 
+                    %    \item Applied Bayesian methods for parameter estimation 
+                    %    \item Calculated and published weighted mean opacities for substellar and planetary atmospheres\\
+                    %\end{itemize} 
    
 \section{Teaching \\Experience} 
                 {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill (Sept 2016 -- Present)\\
@@ -131,10 +131,11 @@ University of California, Santa Cruz, CA \\
                 Instructed students in college level mathematics and writing as a group and drop-in tutor\\
                  
                                   
-\section{Honors \\ \& Awards}
+\section{Honors, Awards, \& Funded Proposals}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
                     %\item Astrobiology Fellow at University of Washington Astrobiology Program (2014)
-                    \item NASA Group Achievement Award: LUVOIR Mission Concept Study Team (2019)
+                    \item \textbf{JWST Cycle 1 Co-PI:} \href{https://www.stsci.edu/jwst/science-execution/program-information?id=1981}{``Tell Me How I’m Supposed To Breathe With No Air: Measuring the Prevalence and Diversity of M-Dwarf Planet Atmospheres''} (2021)
+                    \item \textbf{NASA Group Achievement Award:} LUVOIR Mission Concept Study Team (2019)
                     \item Honors undergraduate thesis in physics (2013)
                     \item University Honor, \textit{cum laude} at University of California, Santa Cruz (2013)\\
                  \end{itemize}  
